src/test/ui/did_you_mean/issue-38147-1.nll.stderr
error[E0596]: cannot borrow immutable item `*self.s` as mutable
  --> $DIR/issue-38147-1.rs:27:9
   |
LL |         self.s.push('x'); //~ ERROR cannot borrow data mutably
   |         ^^^^^^ cannot borrow as mutable

error: aborting due to previous error

For more information about this error, try `rustc --explain E0596`.
